@@ -16,7 +16,7 @@ class Mother;
  * 
  * Since Doxygen does not know that Mother is a Parent, we tell this. We also
  * use 'mixin' of custom bindings from ChildHelper.
- * @dub super: 'Parent,ChildHelper'
+ * @dub super: Parent, ChildHelper
  */
 class Child : public Mother {
   // Private attribute
